--- a/Project/.env
+++ b/Project/.env
@@ -1,1 +1,5 @@
-MONGO_URI=mongodb://root:1234@localhost:27017/
+MONGO_URI=mongodb://root:1234@localhost:27018/
+COMMUNITY = mfunet
+HOST = 172.30.99.11
+DB_NAME = snmp_data
+COLLECTION_NAME = snmp_results
