--- a/Project/.env
+++ b/Project/.env
@@ -1,5 +1,4 @@
-MONGO_URI=mongodb://root:1234@localhost:27018/
+MONGO_URI=mongodb://root:1234@127.0.0.1:27018/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.2.5
 COMMUNITY = mfunet
 HOST = 172.30.99.11
 DB_NAME = snmp_data
-COLLECTION_NAME = snmp_results
