--- a/Project/docker-compose.yaml
+++ b/Project/docker-compose.yaml
@@ -6,13 +6,22 @@ services:
     container_name: mongodb
     restart: always
     ports:
-      - "27017:27017"
+      - "27018:27017"
     volumes:
       - mongodb_data:/data/db
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=1234
-
+  fastapi:
+    build: .
+    container_name: fastapi
+    restart: always
+    ports:
+      - "8000:8000"
+    depends_on:
+      - mongodb
+    volumes:
+      - .:/app  
 volumes:
   mongodb_data:
     driver: local
