--- a/Project/Dockerfile
+++ b/Project/Dockerfile
@@ -17,4 +17,4 @@ COPY . .
 
 # Expose the port FastAPI is running on
 EXPOSE 8000
-CMD ["gunicorn", "main:app", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "--timeout", "120"]
+CMD ["gunicorn", "app:app", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "--timeout", "120"]
