--- a/Project/docker-compose.yaml
+++ b/Project/docker-compose.yaml
@@ -22,6 +22,9 @@ services:
       - mongodb
     volumes:
       - .:/app  
+    environment:
+      - PYTHONUNBUFFERED=1
+      - UVICORN_LIFESPAN_ON=1
 volumes:
   mongodb_data:
     driver: local
