--- a/Project/requirements.txt
+++ b/Project/requirements.txt
@@ -44,7 +44,7 @@ typer==0.12.3
 typing_extensions==4.12.2
 urllib3==2.2.2
 uvicorn==0.30.6
-uvloop==0.19.0
+uvloop==0.19.0; platform_system != 'Windows'
 watchfiles==0.23.0
 websockets==12.0
 x690==1.0.0.post1
