--- a/font/package.json
+++ b/font/package.json
@@ -14,8 +14,10 @@
     "@types/dotenv": "^8.2.0",
     "@types/leaflet": "^1.9.12",
     "leaflet": "^1.9.4",
+    "osmbuildings": "^0.2.0-b",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
