--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,7 +11,7 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
     location /api/ {
-        proxy_pass http://api:8886/;
+        proxy_pass http://fastapi:8000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
